2010-02-03  John W. Eaton  <jwe@octave.org>

	* acinclude.m4 (OCTAVE_HAVE_C99_VSNPRINTF): Delete.
	* configure.ac: Don't call OCTAVE_HAVE_C99_VSNPRINTF.
	Don't check for snprintf, vfprintf, vsprintf, vsnprintf, or _snprintf.
	* bootstrap.conf (gnulib_modules): Include vsprintf in the list.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for strerror.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for raise or strdup.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for poll or usleep.
	* bootstrap.conf (gnulib_modules): Include nanosleep and sleep
	in the list.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for sigaction, sigpending,
	sigprocmask, or sigsuspend.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for getcwd.
	* bootstrap.conf (gnulib_modules): Include getcwd in the list.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* configure.ac: Assume signal.h provides sigset_t and sig_atomic_t.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't call OCTAVE_SIGNAL_CHECK,
	OCTAVE_REINSTALL_SIGHANDLERS, AC_C_CONST, AC_HEADER_STDC, or
	AC_STRUCT_TM, AC_TYPE_SIGNAL.
	Don't define RETSIGTYPE_IS_VOID.
	* acinclude.m4 (OCTAVE_SIGNAL_CHECK, OCTAVE_REINSTALL_SIGHANDLERS):
	Don't call AC_TYPE_SIGNAL.  Assume sighandler return type is void.
	(OCTAVE_SIGNAL_CHECK, OCTAVE_REINSTALL_SIGHANDLERS): Delete macros.
	* bootstrap.conf (gnulib_modules): Include sigaction, signal,
	and sigprocmask in the list.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for stdint.h.
	(AH_BOTTOM): Unconditionally include stdint.h.
	Delete fallback integer type definitions.
	* bootstrap.conf (gnulib_modules): Include stdint in the list.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for atexit or on_exit.

2010-02-02  John W. Eaton  <jwe@octave.org>
