@@ -20,6 +20,7 @@
 gnulib_modules="
   c-strcase
   crypto/md5
+  fcntl
   fnmatch
   getcwd
   getopt-gnu
